src/Pages/Page.css
.Page{
    padding: 0%;
    margin: 0%;
    max-width: 100%;
    min-width: 100vw;
    display: flex;
    background-color: #17181a;
    max-height: 100%; 
    min-height: 100vh;
    padding-bottom: 10%;
    overflow-x: auto;
    
}

.bod{
    margin-left: 140px;
    display: flex;
    flex-direction: column;
    width: 90vw;
    
   
}
.navB{
    
    right: 0;
    left: 0;
}


.Recent{
    float: left;
    color: white;
    margin: 20px;
}






@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}






.bod1{
    
    margin-left: 38px;
    display: flex;
    width: 90vw;
    flex-direction: column;
}

.special_modal .modal-content{
    background-color: #17181a;
    color: lightgray;

 }

 .accordion-button {
    background-color: rgb(12, 12, 12) !important;
    color: white!important;
    margin-bottom: 5px !important;
  }
  
  .accordion-button:focus {
    box-shadow: none;
    color: white;
  }
  
  .accordion-button:not(.collapsed) {
    color: #e5e8eb!important;
    
  }

  .special_modal .form-control:not(active){
    background-color:#17181a!important;
    color: lightgray!important;
    border-color: gray!important;
 }

  .special_modal.form-control:focus{
    background-color:#17181a!important;
    color: lightgray!important;
    border-color: gray!important;
 }

 .thin_modal .modal-dialog {
  
  max-width: 600px !important;
}

.thin_modal .modal-content{
  background-color: #17181a;
  color: lightgray;
}

.thin_modal .form-control:focus{
  background-color:#17181a!important;
  color: lightgray!important;
  border-color: gray!important;
}

.thin_modal .form-control:not(active){
  background-color:#17181a!important;
  color: lightgray!important;
  border-color: gray!important;
}

.timer-modal .modal-content{
  background-color: rgba( 255, 255, 255, 0.25 );
  backdrop-filter: blur( 50px );
  box-shadow:0 8px 32px 0 rgba( 31, 38, 135, 0.37 ) ;
}

 

